<resources>
    <string name="app_name">Ayyappa Deeksha</string>
    <string name="forgotten_account">Forgotten account?</string>
    <string name="new_user">New User</string>
    <string name="title_activity_play_music">PlayMusicActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">9876543210</string>
    <string name="nav_header_subtitle">test@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="btn_update">Update</string>
    <string name="btn_register_here">Register Here</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_otp">Login with OTP</string>
    <string name="hint_or">OR</string>
    <string name="hint_mobile_number_or_email">Mobile number</string>
    <string name="hint_login_as_swamy">Login as Swamy</string>
    <string name="hint_login_as_vendor">Login as Vendor</string>
    <string name="hint_vendor_text">If you want to become a vendor, please register
        as vendor. </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAr1lZXmrMw-YcaTUL-fLqRT0tA6YStNrk
    </string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_submit_small">Submit</string>
    <string name="btn_verify_OTP_register"><![CDATA[Verify OTP & Register]]></string>
    <string name="hint_otp">Enter your  OTP</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_subscribe">Subscribe</string>
    <string name="hint_subscription_name">Subscription Name</string>
    <string name="hint_validity">Validity</string>
    <string name="hint_amount">Amount</string>
</resources>