<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/progressBarOtpVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHeaderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_verify_OTP_register"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_16dp"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/hint_otp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                android:theme="@style/RedColoredButton" />

            <Button
                android:id="@+id/btnVerifyOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_verify"
                android:theme="@style/GreenColoredButton" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>