<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:text="@string/btn_register_here"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_10dp">

                <ImageView
                    android:id="@+id/imgViewLogo"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingTop="10dp"
                    android:src="@drawable/ayyappa_home_image" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilLoginId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tieLoginId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilMobileNumberOrEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:hint="@string/hint_mobile_number_or_email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tieMobileNumberOrEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_login_person"
                        android:singleLine="true"
                        android:inputType="phone"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_5dp"
                    android:gravity="center"
                    android:hint="Password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tiePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_confirm_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">-->

                    <RadioGroup
                        android:id="@+id/radiGroupLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rBLoginSwamy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_login_as_swamy"
                            android:checked="true"
                            />

                        <RadioButton
                            android:id="@+id/rBLoginVendor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint_login_as_vendor" />
                    </RadioGroup>

               <!-- </LinearLayout>-->

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilPassword"
                    android:layout_gravity="center"
                    android:text="@string/btn_login"
                    android:textAllCaps="false"
                    android:theme="@style/GreenColoredButton" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="@dimen/padding_10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_top_7dp"
                        android:layout_marginBottom="@dimen/margin_bottom_7dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_left_7dp"
                        android:layout_marginRight="@dimen/margin_right_7dp"
                        android:gravity="center"
                        android:text="@string/hint_or" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_top_7dp"
                        android:layout_marginBottom="@dimen/margin_bottom_7dp"
                        android:layout_weight="1"
                        android:background="@color/colorLightGray" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnOtpLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilPassword"
                    android:layout_gravity="center"
                    android:text="@string/btn_login_otp"
                    android:textAllCaps="false"
                    android:theme="@style/GreenColoredButton" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="18dp"
                    android:background="@color/colorSkyBlue"
                    />

                <Button
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/forgotten_account"
                    android:textAllCaps="false"
                    android:theme="@style/WhiteColoredButton" />


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>






